@@ -33,6 +33,7 @@ import java.util.List;
 import java.util.Locale;
 
 import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 
 import org.json.JSONArray;
 import org.json.JSONException;
@@ -57,8 +58,9 @@ import org.olat.core.gui.control.DefaultController;
 import org.olat.core.gui.control.Event;
 import org.olat.core.gui.control.WindowBackOffice;
 import org.olat.core.gui.control.pushpoll.WindowCommand;
+import org.olat.core.gui.media.DefaultMediaResource;
 import org.olat.core.gui.media.MediaResource;
-import org.olat.core.gui.media.NothingChangedMediaResource;
+import org.olat.core.gui.media.ServletUtil;
 import org.olat.core.gui.media.StringMediaResource;
 import org.olat.core.gui.render.StringOutput;
 import org.olat.core.gui.render.URLBuilder;
@@ -114,10 +116,10 @@ public class AjaxController extends DefaultController {
 		this.wboImpl = wboImpl;
 		
 		pollPeriodContent = new VelocityContainer("jsserverpartpoll", VELOCITY_ROOT + "/pollperiod.html", null, this);
-		pollPeriodContent.contextPut("pollperiod", new Integer(pollperiod));
+		pollPeriodContent.contextPut("pollperiod", Integer.valueOf(pollperiod));
 		
 		myContent = new VelocityContainer("jsserverpart", VELOCITY_ROOT + "/serverpart.html", null, this);
-		myContent.contextPut("pollperiod", new Integer(pollperiod));
+		myContent.contextPut("pollperiod", Integer.valueOf(pollperiod));
 		
 		//more debug information: OLAT-3529
 		if (ajaxEnabled) myContent.contextPut("isAdmin", Boolean.valueOf(ureq.getUserSession().getRoles().isOLATAdmin()));
@@ -198,14 +200,13 @@ public class AjaxController extends DefaultController {
 				StringMediaResource smr = new StringMediaResource();
 				smr.setContentType("text/html;charset=utf-8");
 				smr.setEncoding("utf-8");
-				try {
-					
-					StringOutput slink = new StringOutput(50);
+				try(StringOutput slink = new StringOutput(50);
+						StringOutput blink = new StringOutput(50)) {
+
 					StaticMediaDispatcher.renderStaticURI(slink, null);
 					//slink now holds static url base like /olat/raw/700/
 					
 					URLBuilder ubu = new URLBuilder(WebappHelper.getServletContextPath() + DispatcherModule.PATH_AUTHENTICATED, "1", "1");
-					StringOutput blink = new StringOutput(50);
 					ubu.buildURI(blink, null, null);
 					//blink holds the link back to olat like /olat/auth/1%3A1%3A0%3A0%3A0/
 		
@@ -222,7 +223,7 @@ public class AjaxController extends DefaultController {
 					
 				} catch (Exception e) {
 					smr.setData(e.toString());
-				};
+				}
 				return smr;
 			}
 		};
@@ -255,9 +256,7 @@ public class AjaxController extends DefaultController {
 					// -> in all cases, do not show the json command, but reload the window which contained the link clicked (= window id of url)
 				.append(" try{ parent.window.o_removeIframe(document.defaultView.frameElement.id); } catch(e) {} ")
 				.append("} else {") 
-					// inform user that ajax-request cannot be opened in a new window,
-					// todo felix: maybe send back request to bookmark-launch current url? -> new window?
-					// we could then come near to what the user probably wanted when he/she opened a link in a new window
+					// inform user that ajax-request cannot be opened in a new window
 				.append("this.document.location=\"")
 				.append(StaticMediaDispatcher.createStaticURIFor("msg/json/en/info.html"))
 				.append("\";")
@@ -337,9 +336,7 @@ public class AjaxController extends DefaultController {
 					// c) ...
 					// -> in all cases, do not show the json command, but reload the window which contained the link clicked (= window id of url)
 			  .append("} else {") 
-					// inform user that ajax-request cannot be opened in a new window,
-					// todo felix: maybe send back request to bookmark-launch current url? -> new window?
-					// we could then come near to what the user probably wanted when he/she opened a link in a new window
+					// inform user that ajax-request cannot be opened in a new window
 			  .append("  this.document.location=\"").append(StaticMediaDispatcher.createStaticURIFor("msg/json/en/info.html")).append("\";")
 			  .append("}}")
 			  .append("\n/* ]]> */\n</script></head><body onLoad=\"invoke()\"></body></html>");
@@ -412,7 +409,7 @@ public class AjaxController extends DefaultController {
 	 */
 	@Override
 	protected void doDispose() {
-		List<MapperKey> mappers = new ArrayList<MapperKey>();
+		List<MapperKey> mappers = new ArrayList<>();
 		mappers.add(mKey);
 		mappers.add(sbmKey);
 		CoreSpringFactory.getImpl(MapperService.class).cleanUp(mappers);
@@ -450,7 +447,20 @@ public class AjaxController extends DefaultController {
 		if (pollperiod != this.pollperiod) {
 			if (pollperiod == -1) pollperiod = DEFAULT_POLLPERIOD;
 			this.pollperiod = pollperiod;
-			pollPeriodContent.contextPut("pollperiod", new Integer(pollperiod));
+			pollPeriodContent.contextPut("pollperiod", Integer.valueOf(pollperiod));
 		} // else no need to change anything
+	}
+	
+	private final class NothingChangedMediaResource extends DefaultMediaResource {
+		
+		@Override
+		public long getCacheControlDuration() {
+			return ServletUtil.CACHE_NO_CACHE;
+		}
+
+		@Override
+		public void prepare(HttpServletResponse hres) {
+			hres.setStatus(HttpServletResponse.SC_NOT_MODIFIED);
+		}
 	}
 }
