@@ -55,8 +55,8 @@ import org.olat.core.util.WebappHelper;
  * @author Felix Jost
  */
 public class FileMediaResource implements MediaResource {
-	//TODO:fj:a clean up on all filemediaresources subclasses
 	protected File file;
+	private long cacheDuration = ServletUtil.CACHE_ONE_HOUR;
 	private boolean unknownMimeType = false;
 	private boolean deliverAsAttachment = false;
 
@@ -87,19 +87,23 @@ public class FileMediaResource implements MediaResource {
 	}
 	
 	@Override
+	public long getCacheControlDuration() {
+		return cacheDuration;
+	}
+	
+	public void setCacheControlDuration(long duration) {
+		cacheDuration = duration;
+	}
+
+	@Override
 	public boolean acceptRanges() {
 		return true;
 	}
-	
-	/**
-	 * @see org.olat.core.gui.media.MediaResource#getContentType()
-	 */
+
 	@Override
 	public String getContentType() {
 		String fileName = file.getName();
 		String mimeType = WebappHelper.getMimeType(fileName);
-		
-		mimeType = WebappHelper.getMimeType(fileName);
 		//html, xhtml and javascript are set to force download
 		if (mimeType == null || "text/html".equals(mimeType)
 				|| "application/xhtml+xml".equals(mimeType)
@@ -111,17 +115,11 @@ public class FileMediaResource implements MediaResource {
 		return mimeType;
 	}
 
-	/**
-	 * @return @see org.olat.core.gui.media.MediaRequest#getSize()
-	 */
 	@Override
 	public Long getSize() {
-		return new Long(file.length());
+		return Long.valueOf(file.length());
 	}
 
-	/**
-	 * @see org.olat.core.gui.media.MediaResource#getInputStream()
-	 */
 	@Override
 	public InputStream getInputStream() {
 		BufferedInputStream bis = null;
@@ -133,25 +131,16 @@ public class FileMediaResource implements MediaResource {
 		return bis;
 	}
 
-	/**
-	 * @see org.olat.core.gui.media.MediaResource#getLastModified()
-	 */
 	@Override
 	public Long getLastModified() {
-		return new Long(file.lastModified());
+		return Long.valueOf(file.lastModified());
 	}
 
-	/**
-	 * @see org.olat.core.gui.media.MediaResource#release()
-	 */
 	@Override
 	public void release() {
-	// void
+		// void
 	}
 
-	/**
-	 * @see org.olat.core.gui.media.MediaResource#prepare(javax.servlet.http.HttpServletResponse)
-	 */
 	@Override
 	public void prepare(HttpServletResponse hres) {
 		if (deliverAsAttachment) {
